--- a/Atividades/Dialogo/index.html
+++ b/Atividades/Dialogo/index.html
@@ -66,7 +66,7 @@
             background-color: #ffffff;
             padding: 15px;
             border-radius: 10px;
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+            box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
             max-width: 90%;
             position: relative;
             transition: border-color .2s ease, box-shadow .2s ease, background-color .2s ease;
@@ -91,7 +91,7 @@
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+            box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
             margin: 10px;
             flex: 1;
             max-width: 200px;
@@ -106,7 +106,7 @@
             background-color: white;
             padding: 20px;
             border: 2px solid #333;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
             z-index: 1000;
             text-align: center;
         }
@@ -131,7 +131,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
+            background-color: rgba(0,0,0,0.5);
             z-index: 999;
         }
 
@@ -142,7 +142,6 @@
         }
 
         /* ======== VISUAL PROGRESS ======== */
-
         .progress-badge {
           position: absolute;
           top: -8px;
@@ -172,25 +171,50 @@
         .step-dot.half{ background:#f2b01e; }
         .step-dot.done{ background:#2e7d32; }
 
+        /* ======== NEW: Prompting animations for audio buttons ======== */
+        .audio-button {
+          border-radius: 999px;
+          border: none;
+          padding: 10px 14px;
+        }
+
+        /* Soft heartbeat pulse to invite click */
+        @keyframes pulse {
+          0%   { transform: scale(1);    box-shadow: 0 0 0 0 rgba(33,150,243,0.45);}
+          70%  { transform: scale(1.08); box-shadow: 0 0 0 12px rgba(33,150,243,0);}
+          100% { transform: scale(1);    box-shadow: 0 0 0 0 rgba(33,150,243,0);}
+        }
+        .pulse {
+          animation: pulse 1.2s ease-in-out infinite;
+          outline: 2px solid rgba(33,150,243,.25);
+        }
+
+        /* Brief highlight cue (for second turn) */
+        @keyframes highlight {
+          0%   { transform: scale(1);    outline: 2px solid rgba(255,193,7,.0); }
+          30%  { transform: scale(1.06); outline: 3px solid rgba(255,193,7,.8); }
+          100% { transform: scale(1);    outline: 2px solid rgba(255,193,7,.0); }
+        }
+        .highlight-once {
+          animation: highlight 900ms ease-in-out 1;
+        }
+
+        /* Success flash after both lines are listened */
+        @keyframes successFlash {
+          0%   { background-color: inherit; }
+          20%  { background-color: #a5d6a7; }
+          100% { background-color: inherit; }
+        }
+        .success-flash {
+          animation: successFlash 700ms ease-in-out 1;
+        }
+
         @media (max-width: 600px) {
-            .back-button {
-                font-size: 14px;
-                padding: 8px 16px;
-            }
-            .nav-button {
-                font-size: 14px;
-                padding: 8px 16px;
-            }
-            .character {
-                flex: 1 1 100%;
-                margin: 10px 0;
-            }
-            .character-text {
-                font-size: 16px;
-            }
-            #dialogue-container {
-                flex-wrap: wrap;
-            }
+            .back-button { font-size: 14px; padding: 8px 16px; }
+            .nav-button { font-size: 14px; padding: 8px 16px; }
+            .character { flex: 1 1 100%; margin: 10px 0; }
+            .character-text { font-size: 16px; }
+            #dialogue-container { flex-wrap: wrap; }
         }
     </style>
 </head>
@@ -254,12 +278,16 @@
         let robotImg = document.getElementById('robot-img');
         let studentImg = document.getElementById('student-img');
 
-        let dialogues = [];          // <-- declarado explicitamente
+        let dialogues = [];
         let totalDialogues = 0;
         let dialoguesRead = 0;
         let userName = "";
         let alertDisplayed = false;
         let currentDialogueIndex = 0;
+
+        // Button refs
+        const robotBtn = document.getElementById('robot-audio-button');
+        const studentBtn = document.getElementById('student-audio-button');
 
         // ======== VISUAL PROGRESS STATE ========
         // Para cada bloco: { robot: false, student: false }
@@ -275,6 +303,10 @@
           if (who === 'robot')  heardStates[idx].robot = true;
           if (who === 'student') heardStates[idx].student = true;
           applyVisualState(idx);
+
+          // Se ambos já foram ouvidos, aplica flash de sucesso nos botões
+          const total = (heardStates[idx].robot?1:0) + (heardStates[idx].student?1:0);
+          if (total === 2) successFlashButtons();
         }
 
         function applyVisualState(idx) {
@@ -320,15 +352,46 @@
             wrap.appendChild(dot);
           });
         }
-        // =======================================
+
+        // ======== NEW: Prompting logic for audio buttons ========
+        function clearPromptAnimations() {
+          robotBtn.classList.remove('pulse','highlight-once','success-flash');
+          studentBtn.classList.remove('pulse','highlight-once','success-flash');
+          robotBtn.style.outline = '';
+          studentBtn.style.outline = '';
+        }
+        function startRobotPrompt() {
+          robotBtn.classList.add('pulse');
+        }
+        function stopRobotPrompt() {
+          robotBtn.classList.remove('pulse');
+        }
+        function cueStudentOnce() {
+          // breve destaque para sugerir a "vez do aluno"
+          studentBtn.classList.remove('highlight-once');
+          // reflow para reiniciar animação se necessário
+          // eslint-disable-next-line no-unused-expressions
+          studentBtn.offsetHeight;
+          studentBtn.classList.add('highlight-once');
+        }
+        function successFlashButtons() {
+          [robotBtn, studentBtn].forEach(btn => {
+            btn.classList.remove('success-flash');
+            // reflow
+            // eslint-disable-next-line no-unused-expressions
+            btn.offsetHeight;
+            btn.classList.add('success-flash');
+          });
+        }
+        // ========================================================
 
         // AUTH: aguarda nome do usuário ANTES de inicializar o diálogo
         firebase.auth().onAuthStateChanged(async function(user) {
             if (user) {
                 console.log("User authenticated:", user.displayName);
                 fetchUserAvatar(user.uid);
-                await fetchUserName(user.uid);   // <-- garante userName preenchido
-                initializeDialogue();            // <-- só então carrega e mostra o diálogo
+                await fetchUserName(user.uid);   // garante userName preenchido
+                initializeDialogue();            // só então carrega e mostra o diálogo
             } else {
                 console.error("User not authenticated. Redirecting to login.");
                 alert("You are not authenticated. Please log in.");
@@ -409,7 +472,7 @@
                 utterance.onend = function () {
                     robotImg.src = '../../../../../imagens/robo1_static.png';
                     if (callback) {
-                        callback(); // marca quem foi ouvido
+                        callback(); // marca quem foi ouvido + triggers visuais
                     }
                     dialoguesRead++;
                     checkCompletion();
@@ -462,6 +525,7 @@
                 console.error("Invalid dialogue index:", index);
                 return;
             }
+            currentDialogueIndex = index;
 
             const lines = dialogues[index].split('\n');
             const robotText = (lines[0] || '').replace(/usuario_nome/g, userName);
@@ -470,11 +534,25 @@
             document.getElementById('robot-text').textContent = robotText;
             document.getElementById('student-text').textContent = studentText;
 
+            // Clear previous prompts & start the "robot first" cue
+            clearPromptAnimations();
+            startRobotPrompt();
+
+            // ROBOT click: stop pulse, speak, then cue student and mark heard
             document.getElementById('robot-audio-button').onclick = function () {
-                speakText(robotText, () => markHeard(index, 'robot'));
+                stopRobotPrompt();
+                speakText(robotText, () => {
+                    markHeard(index, 'robot');
+                    cueStudentOnce();
+                });
             };
+
+            // STUDENT click: remove any highlight and speak, then mark heard
             document.getElementById('student-audio-button').onclick = function () {
-                speakText(studentText, () => markHeard(index, 'student'));
+                studentBtn.classList.remove('highlight-once');
+                speakText(studentText, () => {
+                    markHeard(index, 'student');
+                });
             };
 
             applyVisualState(index);
@@ -531,9 +609,7 @@
                         const avatarUrl = `../../../../imagens/${userData.avatar}`;
                         const img = new Image();
                         img.src = avatarUrl;
-                        img.onload = function() {
-                            studentImg.src = avatarUrl;
-                        };
+                        img.onload = function() { studentImg.src = avatarUrl; };
                         img.onerror = function() {
                             console.error("Erro ao carregar o avatar do usuário. Usando o avatar padrão.");
                         };
